initial module commet

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         }
     ],
     "require": {
+        "yiisoft/yii2": "^2.0.0",
+        "yiisoft/yii2-authclient": "^2.1.0",
         "vip9008/yii2-googleapisclient": "*"
     },
     "autoload": {
