--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,8 @@
         "psr-4": {
             "vip9008\\googleuser\\": ""
         }
+    },
+    "extra": {
+        "bootstrap": "vip9008\\googleuser\\Bootstrap"
     }
 }
