fix all module errors.
fix bootstrap process
include yii2-materialgrid to composer.json
change user contoller to google user controller
fix authentication process in google user controller
add apiTokens array to module

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "require": {
         "yiisoft/yii2": "^2.0.0",
         "yiisoft/yii2-authclient": "^2.1.0",
+        "vip9008/yii2-materialgrid": "*",
         "vip9008/yii2-googleapisclient": "*"
     },
     "autoload": {
